--- a/index.html
+++ b/index.html
@@ -124,41 +124,53 @@
         <!-- Three Row Start -->
         <div class="row">
           <div class="col-xl-4">
-            <i class="fa fa-tablet" aria-hidden="true"></i>
-            <h4>Fully Responsive</h4>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vitae eros eget tellus tristique bibendum.</p>
+            <div class="features-icon">
+              <i class="fa fa-tablet" aria-hidden="true"></i>
+              <h4>Fully Responsive</h4>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vitae eros eget tellus tristique bibendum.</p>
+            </div>
           </div>
           <div class="col-xl-4">
-            <i class="fa fa-lemon-o" aria-hidden="true"></i>
-            <h4>Fully Layered PSD</h4>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vitae eros eget tellus tristique bibendum.</p>
+            <div class="features-icon">
+              <i class="fa fa-lemon-o" aria-hidden="true"></i>
+              <h4>Fully Layered PSD</h4>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vitae eros eget tellus tristique bibendum.</p>
+            </div> 
           </div>
           <div class="col-xl-4">
-            <i class="fa fa-folder-o" aria-hidden="true"></i>
-            <h4>Font Awesome Icons</h4>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vitae eros eget tellus tristique bibendum.</p>
+            <div class="features-icon">
+                <i class="fa fa-folder-o" aria-hidden="true"></i>
+                <h4>Font Awesome Icons</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vitae eros eget tellus tristique bibendum.</p>
+            </div>
           </div>
         </div>
         <!-- Three Row End -->
-                <!-- Three Row Start -->
-                <div class="row">
-                  <div class="col-xl-4">
-                    <i class="fa fa-code" aria-hidden="true"></i>
-                    <h4>HTML3 & CSS3 </h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vitae eros eget tellus tristique bibendum.</p>
-                  </div>
-                  <div class="col-xl-4">
-                    <i class="fa fa-envelope-o" aria-hidden="true"></i>
-                    <h4>Email Template</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vitae eros eget tellus tristique bibendum.</p>
-                  </div>
-                  <div class="col-xl-4">
-                    <i class="fa fa-bookmark-o" aria-hidden="true"></i>
-                    <h4>Free to download</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vitae eros eget tellus tristique bibendum.</p>
-                  </div>
-                </div>
-                <!-- Three Row End -->
+          <!-- Three Row Start -->
+          <div class="row">
+            <div class="col-xl-4">
+              <div class="features-icon">
+                <i class="fa fa-code" aria-hidden="true"></i>
+                <h4>HTML3 & CSS3 </h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vitae eros eget tellus tristique bibendum.</p>
+              </div>
+            </div>
+            <div class="col-xl-4">
+              <div class="features-icon">
+                <i class="fa fa-envelope-o" aria-hidden="true"></i>
+                <h4>Email Template</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vitae eros eget tellus tristique bibendum.</p>
+              </div>
+            </div>
+            <div class="col-xl-4">
+              <div class="features-icon">
+                <i class="fa fa-bookmark-o" aria-hidden="true"></i>
+                <h4>Free to download</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vitae eros eget tellus tristique bibendum.</p>
+              </div>
+            </div>
+          </div>
+          <!-- Three Row End -->
       </div>
     </section>
     <!-- Features End -->
