--- a/index.html
+++ b/index.html
@@ -126,6 +126,8 @@
           <div class="col-xl-4">
             <div class="features-icon">
               <i class="fa fa-tablet" aria-hidden="true"></i>
+            </div>
+            <div class="features-text">
               <h4>Fully Responsive</h4>
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vitae eros eget tellus tristique bibendum.</p>
             </div>
@@ -133,6 +135,8 @@
           <div class="col-xl-4">
             <div class="features-icon">
               <i class="fa fa-lemon-o" aria-hidden="true"></i>
+            </div>
+            <div class="features-text">
               <h4>Fully Layered PSD</h4>
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vitae eros eget tellus tristique bibendum.</p>
             </div> 
@@ -140,6 +144,8 @@
           <div class="col-xl-4">
             <div class="features-icon">
                 <i class="fa fa-folder-o" aria-hidden="true"></i>
+              </div>
+              <div class="features-text">
                 <h4>Font Awesome Icons</h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vitae eros eget tellus tristique bibendum.</p>
             </div>
@@ -151,6 +157,8 @@
             <div class="col-xl-4">
               <div class="features-icon">
                 <i class="fa fa-code" aria-hidden="true"></i>
+              </div>
+              <div class="features-text">
                 <h4>HTML3 & CSS3 </h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vitae eros eget tellus tristique bibendum.</p>
               </div>
@@ -158,6 +166,8 @@
             <div class="col-xl-4">
               <div class="features-icon">
                 <i class="fa fa-envelope-o" aria-hidden="true"></i>
+              </div>
+              <div class="features-text">
                 <h4>Email Template</h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vitae eros eget tellus tristique bibendum.</p>
               </div>
@@ -165,6 +175,8 @@
             <div class="col-xl-4">
               <div class="features-icon">
                 <i class="fa fa-bookmark-o" aria-hidden="true"></i>
+              </div>
+              <div class="features-text">
                 <h4>Free to download</h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vitae eros eget tellus tristique bibendum.</p>
               </div>
