Full Version without responsive

--- a/index.html
+++ b/index.html
@@ -187,13 +187,13 @@
     </section>
     <!-- Features End -->
 
-    <section class="newsletter">
+    <section class="newsletter py-5">
         <div class="container">
           <!-- Newsletter Head -->
           <div class="row subscription-head">
             <div class="col-xl-12 text-center">
               <h3>Keep in touch with us</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vitae eros eget tellus tristique bibendum. Donec rutrum sed sem quis venenatis.</p>
+              <p class="my-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vitae eros eget tellus tristique bibendum.<br /> Donec rutrum sed sem quis venenatis.</p>
             </div>
           </div>
           <!-- Newsletter End -->
@@ -201,11 +201,11 @@
           <div class="row subscription-form">
             <div class="col-xl-9">
               <form>
-                <input type="text" name="email" placeholder="Enter your email to update" class="form-control">
+                <input type="text" name="email" placeholder="Enter your email to update" class="form-control input">
               </form>
             </div>
             <div class="col-xl-3">
-              <button type="button" class="btn btn-warning">Submit</button>
+              <button type="button" class="btn btn-warning btn-block">Submit</button>
             </div>
           </div>
           <!-- Newsletter Form End -->
@@ -214,7 +214,7 @@
             <ul class="list-inline">
               <li class="list-inline-item"><a href="#"></a><i class="fa fa-facebook-square" aria-hidden="true"></i></li>
               <li class="list-inline-item"><a href="#"></a><i class="fa fa-twitter-square" aria-hidden="true"></i></li>
-              <li class="list-inline-item"><a href="#"><i class="fa fa-google-plus-square" aria-hidden="true"></i></a></li>
+              <li class="list-inline-item"><a href="#"></a><i class="fa fa-google-plus-square" aria-hidden="true"></i></li>
               <li class="list-inline-item"><a href="#"></a><i class="fa fa-pinterest-square" aria-hidden="true"></i></li>
             </ul>
           </div>
@@ -223,11 +223,11 @@
         </div>
     </section>
     <!-- Footer Menu -->
-    <section class="footer-navigation my-5">
+    <section class="footer-navigation py-5">
       <div class="container">
         <div class="row">
           <div class="col-xl-4">
-              <p> HALOVIETNAM LTD 66, Dang Van ngu, Dong Da Hanoi, Vietnam</p>
+              <p>HALOVIETNAM LTD 66, Dang Van ngu, Dong Da Hanoi, Vietnam</p>
               <p>contact@halovietnam.com</p>
               <p>+844 35149182</p>
           </div>
@@ -268,7 +268,7 @@
     <section class="footer">
       <div class="container">
         <div class="row">
-          <p>Footer</p>
+          <p class="copyright">Copyright - 2020 || Shovon</p>
         </div>
       </div>
     </section>
