--- a/index.html
+++ b/index.html
@@ -50,12 +50,12 @@
                 </ol>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <div class="row">
+                        <div class="row mb-5">
                             <div class="col-xl-7 col-lg-7 col-md-7 col-sm-12 align-self-center">
                                 <h3 class="font-weight-bold pb-3">Inspire your inspiration</h3>
                                 <h6 class=" pb-2">Simple to use for your app, products showcase and your inspiration</h6>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vitae eros eget tellus tristique bibendum. Donec rutrum sed sem quis venenatis. Proin viverra risus a eros volutpat tempor. In quis arcu et eros porta lobortis sit </p>
-                                <ul class="list-inline mt-3">
+                                <ul class="list-inline my-3">
                                     <li class="list-inline-item"><i class="fa fa-apple"></i></li>
                                     <li class="list-inline-item"><i class="fa fa-android"></i></li>
                                     <li class="list-inline-item"><i class="fa fa-windows"></i></li>
@@ -67,12 +67,12 @@
                         </div>
                     </div>
                     <div class="carousel-item">
-                      <div class="row">
+                      <div class="row mb-5">
                           <div class="col-xl-7 col-lg-7 col-md-7 col-sm-12 align-self-center">
                               <h3 class="font-weight-bold pb-3">Inspire your inspiration</h3>
                               <h6 class=" pb-2">Simple to use for your app, products showcase and your inspiration</h6>
                               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vitae eros eget tellus tristique bibendum. Donec rutrum sed sem quis venenatis. Proin viverra risus a eros volutpat tempor. In quis arcu et eros porta lobortis sit </p>
-                              <ul class="list-inline mt-3">
+                              <ul class="list-inline my-3">
                                   <li class="list-inline-item"><i class="fa fa-apple"></i></li>
                                   <li class="list-inline-item"><i class="fa fa-android"></i></li>
                                   <li class="list-inline-item"><i class="fa fa-windows"></i></li>
@@ -89,7 +89,7 @@
                             <h3 class="font-weight-bold pb-3">Inspire your inspiration</h3>
                             <h6 class=" pb-2">Simple to use for your app, products showcase and your inspiration</h6>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vitae eros eget tellus tristique bibendum. Donec rutrum sed sem quis venenatis. Proin viverra risus a eros volutpat tempor. In quis arcu et eros porta lobortis sit </p>
-                            <ul class="list-inline mt-3">
+                            <ul class="list-inline my-3">
                                 <li class="list-inline-item"><i class="fa fa-apple"></i></li>
                                 <li class="list-inline-item"><i class="fa fa-android"></i></li>
                                 <li class="list-inline-item"><i class="fa fa-windows"></i></li>
@@ -111,11 +111,11 @@
     <!--End Header-->
 
     <!-- Features -->
-    <section class="tinyone-features my-5">
+    <section class="tinyone-features">
       <div class="container">
         <div class="row features-head">
           <div class="col-xl-12 text-center">
-            <h3 class="font-weight-bold">Tinyone features</h3>
+            <h3 class="font-weight-bold mt-5">Tinyone features</h3>
             <p class="my-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vitae eros eget tellus tristique bibendum.<br> Donec rutrum sed sem quis venenatis.</p>
             <hr class="my-3">
           </div>
@@ -123,7 +123,7 @@
 
         <!-- Three Row Start -->
         <div class="row">
-          <div class="col-xl-4">
+          <div class="col-xl-4 col-lg-4 col-md-4 col-sm-4 mt-4">
             <div class="features-icon">
               <i class="fa fa-tablet" aria-hidden="true"></i>
             </div>
@@ -132,7 +132,7 @@
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vitae eros eget tellus tristique bibendum.</p>
             </div>
           </div>
-          <div class="col-xl-4">
+          <div class="col-xl-4 col-lg-4 col-md-4 col-sm-4 mt-4">
             <div class="features-icon">
               <i class="fa fa-lemon-o" aria-hidden="true"></i>
             </div>
@@ -141,7 +141,7 @@
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vitae eros eget tellus tristique bibendum.</p>
             </div> 
           </div>
-          <div class="col-xl-4">
+          <div class="col-xl-4 col-lg-4 col-md-4 col-sm-4 mt-4">
             <div class="features-icon">
                 <i class="fa fa-folder-o" aria-hidden="true"></i>
               </div>
@@ -153,8 +153,8 @@
         </div>
         <!-- Three Row End -->
           <!-- Three Row Start -->
-          <div class="row">
-            <div class="col-xl-4">
+          <div class="row mb-5">
+            <div class="col-xl-4 col-lg-4 col-md-4 col-sm-4 mt-4">
               <div class="features-icon">
                 <i class="fa fa-code" aria-hidden="true"></i>
               </div>
@@ -163,7 +163,7 @@
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vitae eros eget tellus tristique bibendum.</p>
               </div>
             </div>
-            <div class="col-xl-4">
+            <div class="col-xl-4 col-lg-4 col-md-4 col-sm-4 mt-4">
               <div class="features-icon">
                 <i class="fa fa-envelope-o" aria-hidden="true"></i>
               </div>
@@ -172,7 +172,7 @@
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vitae eros eget tellus tristique bibendum.</p>
               </div>
             </div>
-            <div class="col-xl-4">
+            <div class="col-xl-4 col-lg-4 col-md-4 col-sm-4 mt-4">
               <div class="features-icon">
                 <i class="fa fa-bookmark-o" aria-hidden="true"></i>
               </div>
@@ -198,15 +198,15 @@
           </div>
           <!-- Newsletter End -->
           <!-- Newsletter Form -->
-          <div class="row subscription-form">
-            <div class="col-xl-9">
+          <div class="row subscription-form my-3">
+            <div class="col-xl-9 col-lg-9 col-md-9 col-sm-9">
               <form>
                 <input type="text" name="email" placeholder="Enter your email to update" class="form-control input">
-              </form>
             </div>
-            <div class="col-xl-3">
+            <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3">
               <button type="button" class="btn btn-warning btn-block">Submit</button>
             </div>
+          </form>
           </div>
           <!-- Newsletter Form End -->
           <!-- Social Media Icons -->
@@ -268,7 +268,7 @@
     <section class="footer">
       <div class="container">
         <div class="row">
-          <p class="copyright">Copyright - 2020 || Shovon</p>
+          <p class="copyright my-3">Copyright - 2020 || Shovon</p>
         </div>
       </div>
     </section>
